size choice left right spacing actually fixed irl

--- a/spiderstyles.css
+++ b/spiderstyles.css
@@ -83,11 +83,11 @@ button {
 .size {
     display: flex;
     font-size: 20px;
-    padding-left: 15.5%;
+    justify-content: center;
 }
 
-#personal, #medium, #large, #extra {
-    margin-right: 10%;
+#personal, #medium, #large {
+    margin: 0 15% 0 0;
 }
 
 .crust_container, .sauce_container, .cheese_container {
